--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <script src="https://cdn.rawgit.com/zcanter/aframe-gradient-sky/master/dist/gradientsky.min.js"></script>
   <script src="base.js"></script>
   <script src="car.js"></script>
-  <script src="movePosition.js"></script>
 </head>
 
 <body>
 
   <a-scene background="color:white">
-    
-    <a-entity position="0 0 30" base></a-entity>
+      <a-entity car></a-entity>
+      <a-entity base></a-entity>
   </a-scene>
 
 </body>
